--- a/style-admin.css
+++ b/style-admin.css
@@ -1,6 +1,6 @@
-.widefat {width: auto;border:solid 1px red !important;}
+.widefat {width: auto; }
 .ss-list-width {min-width:10%}
 .ss-form-width {width:100%}
 .ss-th-width {width:25%}
 .ss-field-width {width:75%}
-table {border:solid 1px red;}
+ .wp-list-table td input {width:100% !important;}
