--- a/style-admin.css
+++ b/style-admin.css
@@ -4,4 +4,4 @@
 .ss-th-width {width:25%}
 .ss-field-width {width:75%}
  .wp-list-table td input {width:100% !important;}
-.full-width{width:100%;}
+.full-width{width:100%;border:solid red 1px;}
